--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello World</title>
+  <title>UUID v7</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <h1>Hello World</h1>
+    <header>
+        <section>
+            <div id="current-iso-time"></div>
+            <code id="current-uuidv7-time"></code>
+        </section>
+    </header>
+
+    <script src="main.js"></script>
 </body>
 </html>
 
